--- a/results-aqi-income-race-random/xgboost_income_race_random.ipynb
+++ b/results-aqi-income-race-random/xgboost_income_race_random.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -125,7 +125,7 @@
               "4                               14.7                   5.2  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -218,7 +218,7 @@
         "\n",
         "grid_search = GridSearchCV(\n",
         "    xgb_model, param_grid, cv=cv_splits, scoring='neg_mean_squared_error',\n",
-        "    n_jobs=-1, verbose=1\n",
+        "    n_jobs=1, verbose=1\n",
         ")\n",
         "\n",
         "grid_search.fit(X_train, y_train, sample_weight=w_train)\n",
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -307,9 +307,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n",
+            "Race-only model - Best params: {'learning_rate': 0.05, 'max_depth': 3, 'min_child_weight': 3, 'n_estimators': 100}\n",
+            "Test set metrics:\n",
+            "  RMSE: 9.88\n",
+            "  MAE:  6.74\n",
+            "  R2:   0.0854\n"
+          ]
+        }
+      ],
       "source": [
         "race_cols = ['% Black or African American alone', '% Hispanic or Latino']\n",
         "X_race = df[race_cols]\n",
@@ -325,7 +338,7 @@
         "\n",
         "grid_search_r = GridSearchCV(\n",
         "    xgb.XGBRegressor(random_state=42, objective='reg:squarederror'),\n",
-        "    param_grid, cv=cv_splits_r, scoring='neg_mean_squared_error', n_jobs=-1, verbose=1\n",
+        "    param_grid, cv=cv_splits_r, scoring='neg_mean_squared_error', n_jobs=1, verbose=1\n",
         ")\n",
         "grid_search_r.fit(X_train_r, y_train_r, sample_weight=w_train_r)\n",
         "\n",
@@ -342,9 +355,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Race-only feature importance:\n",
+            "                             feature  importance\n",
+            "0  % Black or African American alone    0.614115\n",
+            "1               % Hispanic or Latino    0.385885\n"
+          ]
+        }
+      ],
       "source": [
         "importance_race = pd.DataFrame({\n",
         "    'feature': X_train_r.columns,\n",
